[package]
edition = "2021"
name = "processtree"
version = "0.2.0"
authors = ["Konstantin Läufer <klaeufer@gmail.com>"]

[dependencies]
anyhow = "1.0.81"
clap = { version = "4.5.3", features = ["derive"] }
env_logger = "0.11.3"
log = "0.4.21"
rand = "0.8.5"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
